--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:600" rel="stylesheet">
-    
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous"></script>
 
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
